2008-02-10  Richard Stallman  <rms@gnu.org>

	* lisp.h (ASET): Use AREF, not ASLOT.

2008-02-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lisp.h (ASET): Check bounds.

2008-02-10  Glenn Morris  <rgm@gnu.org>

	* buffer.c (mode-name): Doc fix.

2008-02-09  Dan Nicolaescu  <dann@ics.uci.edu>

	* src/Makefile.in:
	* src/emacs.c:
	* src/gmalloc.c:
	* src/keyboard.c:
	* src/lisp.h:
	* src/m/ibm370aix.h:
	* src/process.c:
	* src/regex.c:
	* src/s/hpux.h:
	* src/sysdep.c:
	* src/sysselect.h:
	* src/systty.h:
	* src/unexec.c:
	* src/w32term.c:
	* src/xsmfns.c:
	* src/xterm.c: Remove code that deals with obsolete variables.

	* s/msdos.h (DONT_NEED_ENVIRON): Don't define.

	* ecrt0.c: Replace the DONT_NEED_ENVIRON test with MSDOS test,
	nothing else needs it anymore.

2008-02-09  Eli Zaretskii  <eliz@gnu.org>

	* buffer.h (FETCH_CHAR_AS_MULTIBYTE): Use unibyte_to_multibyte_table
	instead of unibyte_char_to_multibyte.

2008-02-09  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/gnu-linux.h: Remove commented out code.

	* unexec.c: Remove references to obsolete variable
	COFF_ENCAPSULATE.

	* Makefile.in: Update what RMS says about using autoconf.
	(C_COMPILER):
	(COFF_ENCAPSULATE):
	(MAKE_PARALLEL): Remove obsolete variable.
	(C_SWITCH_MACHINE_1, C_SWITCH_SYSTEM_1, C_SWITCH_SITE_1):
	(C_SWITCH_X_SITE_1, C_SWITCH_X_MACHINE_1)
	(C_SWITCH_X_SYSTEM_1): Move invariant code outside conditional.

2008-02-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keymap.c (Fkey_description): Move side effect outside of macro call.

	* xfaces.c (Finternal_make_lisp_face):
	* keyboard.c (add_command_key, parse_menu_item): Use ASET.

	* fontset.c (free_face_fontset): Use FONTSET_FROM_ID.
	(syms_of_fontset): Use ASET.

	* fns.c (concat): Move side effect outside of macro call.
	(hash_clear): Use ASET.

2008-02-08  Richard Stallman  <rms@gnu.org>

	* frame.c (Fdelete_frame): If FORCE, don't call hooks.
	If FORCE, and frame has a surrogate minibuffer for another frame,